# HiRDMA

./: CMakeLists.txt  LICENSE  README.md
include/: header.hpp  hi_rdma.hpp  options.hpp  slice.hpp  sock.hpp  status.hpp
src/: hi_rdma.cc  hi_rdma.cpp  sock.cc  status.cc
test/cs/: Makefile  client.cpp  config.hpp  server.cpp
test/example/: Makefile  client.cpp  config.hpp  demo_1.cpp  server.cpp
test/rdma-test/: client.cpp  config.hpp  server.cpp
